Fixes a problem where clicking an URL outside Mozilla does nothing.  r=ssu, sr=dveditz, a=chofmann, b=193189